--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Portfolio</a>
-            <a href="{{ site.baseurl }}/">Resume</a>
+            <a href="{{ site.baseurl }}/Resume">Resume</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
